--- a/source/sass/blocks/banner.scss
+++ b/source/sass/blocks/banner.scss
@@ -30,6 +30,7 @@
     display: block;
     color: #000000;
     font-size: 47px;
+    font-weight: 900;
     line-height: 59px;
     letter-spacing: -0.02em;
     opacity: 1;
