--- a/source/sass/blocks/company-item-top.scss
+++ b/source/sass/blocks/company-item-top.scss
@@ -133,7 +133,7 @@
 
 //кнопка
 .custom-volunteering .index-block__btn--subscribe {
-    margin: 70px auto 0 !important;
+    margin: 60px auto 50px !important;
 }
 
 .custom-volunteering .index-block__btn--subscribe .btn {
