--- a/source/sass/blocks/tizer-bottom.scss
+++ b/source/sass/blocks/tizer-bottom.scss
@@ -14,7 +14,7 @@
         no-repeat,
         repeat;
     background-position:
-        50% 0,
+        50% -1px,
         50% 100%,
         50% 0,
         calc(50% + 656px) -84px,
