--- a/source/sass/blocks/body.scss
+++ b/source/sass/blocks/body.scss
@@ -1,9 +1,9 @@
 .body {
     min-width: 375px;
     background-color: #F6F8FB;
+    font-family: 'KFC', Arial, sans-serif;
 }
 
-body,
 h1,
 h2,
 h3,
@@ -19,10 +19,8 @@ h6,
 .popup-window,
 body div.bx-yandex-map,
 .fancybox-title {
-    font-family: 'KFC',
-        Arial,
-        sans-serif;
-    color: #000000;
+  color: #000000;
+    font-family: 'KFC', Arial, sans-serif;
     font-weight: 900;
 }
 
