add styles for modal buttons

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,3 +9,4 @@
 @import "blocks/banner-cards.scss";
 @import "blocks/company-item-top.scss";
 @import "blocks/company-item-bottom.scss";
+@import "blocks/user-variants.scss";
