--- a/source/css/style.css
+++ b/source/css/style.css
@@ -853,4 +853,38 @@ footer .footer__main-part .font_15 {
 .custom-charity .company-item--IMG_SIDE + div .btn:hover {
   background-color: hsl(var(--theme-base-color-hue), var(--theme-base-color-saturation), calc(var(--theme-base-color-lightness) + var(--theme-lightness-hover-diff)));
 }
+
+.user-variants {
+  padding: 54px 35px 104px;
+  text-align: center;
+}
+.user-variants > span {
+  display: block;
+  margin: 0 96px;
+  font-weight: 400;
+}
+.user-variants .index-block__btn {
+  margin-top: 20px;
+}
+.user-variants .btn {
+  padding-right: 16px;
+  padding-left: 16px;
+  color: #fff;
+  background-color: var(--theme-base-color);
+}
+.user-variants .btn:hover {
+  background-color: hsl(var(--theme-base-color-hue), var(--theme-base-color-saturation), calc(var(--theme-base-color-lightness) + var(--theme-lightness-hover-diff)));
+}
+.user-variants > div > a {
+  margin: 0 !important;
+  flex-grow: 1;
+  width: 0;
+}
+.user-variants > div > a + a {
+  margin-left: 10px !important;
+}
+
+.jqmWindow {
+  max-width: 620px;
+}
 /*# sourceMappingURL=style.css.map */
